# nbsc

./: README.md  cn_nbs.py  main.py  pyproject.toml
tests/: pytest.ini  test_annual_and_monthly_inflation.py
