[tool.poetry]
name = "nbsc"
version = "0.1.0"
description = ""
authors = ["Sergey Kikevich <sergey@rostsber.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
pandas = ">=1.0.0"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
