[tool.poetry]
name = "nbsc"
version = "0.1.0"
description = ""
authors = ["Sergey Kikevich <sergey@rostsber.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <4.0.0"
pandas = ">=1.0.0"
requests = "^2.27.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
