[tool.poetry]
name = "nbsc"
version = "0.1.0"
description = "Python interface for National Bureau of Statistics of China (NBCS) API"
keywords = ["finance", "statistics", "python", "china"]
repository = "https://github.com/mbk-dev/nbsc"
authors = ["Sergey Kikevich <sergey@rostsber.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <4.0.0"
pandas = ">=1.0.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
